<resources>
    <string name="app_name">GoFundMe</string>

    <string name="sign_in"><u>Sign in</u></string>
    <string name="sign_up"><u>Sign up</u></string>
    <string name="piggy_bank">Piggy bank</string>
    <string name="sign_into_your_account">Sign into your account</string>
    <string name="bottom_sheet_description">CrowdFunding is Africa\'s largest Online Fundraising Platform. We provide the most Secure, Transparent &amp; Convenient way to raise. Our Fundraisers include: Medical, Funeral, Weddings, Churches, Businesses, Education, Projects, Sports, Construction &amp; Disasters.</string>
    <string name="bottom_sheet_Title">Help Peolple Achieve their Goals</string>
    <string name="edt_hint_email">Email</string>
    <string name="log_in_description">Get back into your account</string>
    <string name="login">Login</string>
    <string name="log_in_image">Log in image</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="edt_hint_password">password</string>
    <string name="sign_up_to_get_started">Sign up to get Started</string>
    <string name="first_name">First name</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="welcome">Welcome</string>
    <string name="sign_up_image">Sign up image</string>
    <string name="active_fundraising">Active Fundraising</string>
    <string name="your_donation">Your donation</string>
    <string name="days_left"><pre> Days left</pre></string>
    <string name="donate">Donate</string>
    <string name="recent_donors">Recent Donors</string>
    <string name="amount">amount</string>
    <string name="create_fundme_project">Create FundMe Project</string>
    <string name="title_purpose_of_the_project">Title / Purpose of the project</string>
    <string name="description">Description</string>
    <string name="amount_needed">Amount needed</string>
    <string name="date_deadline">Date (Deadline)</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="welcome_back">Welcome back,</string>
    <string name="thank_you">Thank you</string>
    <string name="back_to_home_page">Back to Home Page</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="last_login">Last login:</string>
    <string name="obtained">Obtained</string>
    <string name="target">Target</string>
    <string name="create_new_project">Create new project</string>
    <string name="enter_the_details_of_the_project">Enter the details of the project</string>
    <string name="create_project">Create project</string>
    <string name="profile_fab">Update profile</string>
    <string name="your_projects">Your projects</string>
    <string name="thank_you_for_your_contribution">Thank you for your contribution</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="verification">Verification</string>
    <string name="verification_code">Verification code</string>
    <string name="verify">verify</string>
    <string name="enter_the_code_sent_to_your_email_address">Enter the code sent to your email address</string>
    <string name="project_image">Project image</string>
    <string name="password">Password</string>
    <string name="update">Update</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="update_profile">UPDATE PROFILE</string>
    <string name="username_image">Username Image</string>
    <string name="email_image">Email image</string>
    <string name="password_image">Password image</string>
    <string name="fundraising_image">Fundraising image</string>
    <string name="invalid_credentials">Credentials entered are invalid</string>
    <string name="last_name">Last name</string>
    <string name="names_should_not_contain_any_special_characters">Names should not contain any special characters</string>
    <string name="name_cannot_be_empty">Fields cannot be empty</string>
    <string name="invalid_error_code">Invalid error code</string>
    <string name="password_must_not_contain_special_characters">Password must not contain special characters</string>
    <string name="fields_cannot_be_empty">Fields cannot be empty</string>
</resources>