<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="user"
            type="com.gads.crowdfunding.viewmodel.onboardingviewmodel.OnboardingViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.onboarding.SignUpFragment">
    android:layout_height="wrap_content"
    tools:context=".onboarding.SignUpFragment">


    <ImageView
        android:contentDescription="@string/sign_up_image"
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:src="@drawable/sign_up_drawable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/welcome"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView17"
        style="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/sign_up_to_get_started"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_firstName"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/first_name"
        android:inputType="text"
        app:boxStrokeErrorColor="@color/Danger_red"
        app:boxBackgroundColor="@color/white"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView17">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_firstName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:paddingStart="10dp"
            android:text="@={user.firstName}"
            android:paddingEnd="10dp"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_lastName"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/last_name"
        android:inputType="text"
        app:boxStrokeErrorColor="@color/Danger_red"
        app:boxBackgroundColor="@color/white"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_firstName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_LastName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:paddingStart="10dp"
            android:text="@={user.lastName}"
            android:paddingEnd="10dp"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/edt_hint_email"
        app:boxStrokeErrorColor="@color/Danger_red"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusTopStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusBottomEnd="15dp"
        android:inputType="textEmailAddress"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_lastName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_email"
            android:textColor="@color/black"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_width="match_parent"
            android:text="@={user.email}"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/edt_hint_password"
        android:inputType="textPassword"
        app:boxStrokeErrorColor="@color/Danger_red"
        app:boxBackgroundColor="@color/white"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_email"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_password"
            android:textColor="@color/black"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@={user.password}"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/errorTextContainsSpecialCharacters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/names_should_not_contain_any_special_characters"
        android:textColor="@color/Danger_red"
        app:layout_constraintBottom_toTopOf="@+id/btn_SignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/edt_password" />

    <TextView
        android:id="@+id/errorTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_must_not_contain_special_characters"
        android:textColor="@color/Danger_red"
        app:layout_constraintBottom_toTopOf="@+id/btn_SignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/edt_password"/>

    <TextView
        android:id="@+id/errorTextBlankName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_cannot_be_empty"
        android:textColor="@color/Danger_red"
        app:layout_constraintBottom_toTopOf="@+id/btn_SignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/edt_password" />


    <Button
        android:id="@+id/btn_SignUp"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginTop="55dp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="@+id/edt_password"
        app:layout_constraintStart_toStartOf="@+id/edt_password"
        app:layout_constraintTop_toBottomOf="@id/edt_password" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/btn_SignUp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="30dp"
        app:layout_constraintStart_toStartOf="@+id/btn_SignUp"
        app:layout_constraintTop_toBottomOf="@+id/btn_SignUp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/txt_haveAnAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="start"
            android:text="@string/sign_in"
            android:textColor="@color/ClickableWords"
            android:textStyle="italic" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
</layout>