<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:id="@+id/item_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="400dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/bottomsheet_shape_for_onboarding"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_helpPeople"
        android:layout_marginTop="80dp"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bottom_sheet_Title"
        android:textColor="@color/colorOnPrimary"
        android:textSize="25sp"
        android:layout_gravity="center_horizontal" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_desc"
        style="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:text="@string/bottom_sheet_description"
        android:textAlignment="center"
        android:textColor="@color/colorOnPrimary"
        android:textSize="15sp" />

    <com.google.android.material.button.MaterialButton
        android:layout_marginTop="70dp"
        android:id="@+id/btn_bottomSheet_SingIn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginHorizontal="70dp"
        android:backgroundTint="@color/colorPrimaryVariant"
        android:text="@string/sign_into_your_account"
        android:textAllCaps="false"
        android:textColor="@color/colorOnPrimary"
        android:textSize="15sp"
        app:cornerRadius="20dp" />


</LinearLayout>
